--- a/dev/lecture/seminar_9/index.html
+++ b/dev/lecture/seminar_9/index.html
@@ -9,16 +9,12 @@ end
     Damage Models:
       Damage:
         Damage Model: My Model
-        Important value: 200</code></pre><ul><li>get this value in the code</li></ul><pre><code class="language-julia hljs">function init_model(datamanager::Module,
-                    nodes::AbstractVector{Int64},
+        Important value: 200</code></pre><ul><li>get this value in the code</li></ul><pre><code class="language-julia hljs">function init_model(nodes::AbstractVector{Int64},
                     damage_parameter::Dict,
                     block::Int64)
 
     println(damage_parameter[&quot;Important value&quot;])
-
-    return datamanager
-end</code></pre><ul><li>init_model is used to create model specific fields and to check if values, especially optional values exist</li></ul><pre><code class="language-julia hljs">function init_model(datamanager::Module,
-                    nodes::AbstractVector{Int64},
+end</code></pre><ul><li>init_model is used to create model specific fields and to check if values, especially optional values exist</li></ul><pre><code class="language-julia hljs">function init_model(nodes::AbstractVector{Int64},
                     damage_parameter::Dict,
                     block::Int64)
     if !inothing(get(damage_parameter, &quot;Important value&quot;, nothing))
@@ -26,31 +22,26 @@ end</code></pre><ul><li>init_model is used to create model specific fields and t
     else
         damage_parameter[&quot;Important value&quot;] = 0
     end
-    my_constant_node_field = datamanager.create_constant_node_field(&quot;my constant node field&quot;, Float64, 10)
-    my_node_field_N, my_node_field_NP1 = datamanager.create_node_field(&quot;my node field&quot;, Float64, 2, VectorOrMatrix=&quot;Matrix&quot;)
-    my_constant_bond_field = datamanager.create_constant_bond_field(&quot;my constant bond field&quot;, Float64, 10)
-    my_bobd_field_N,  my_bobd_field_NP1 = datamanager.create_bond_field(&quot;my bond field&quot;, Float64, 10)
+    my_constant_node_field = Data_Manager.create_constant_node_field(&quot;my constant node field&quot;, Float64, 10)
+    my_node_field_N, my_node_field_NP1 = Data_Manager.create_node_field(&quot;my node field&quot;, Float64, 2, VectorOrMatrix=&quot;Matrix&quot;)
+    my_constant_bond_field = Data_Manager.create_constant_bond_field(&quot;my constant bond field&quot;, Float64, 10)
+    my_bobd_field_N,  my_bobd_field_NP1 = Data_Manager.create_bond_field(&quot;my bond field&quot;, Float64, 10)
 
-   field = datamanager.create_constant_free_size_field(Fieldname::String, Type_of_variable::Type, size::NTuple)
-    fieldN, fieldNP1 = datamanager.create_free_size_field(Fieldname::String, Type_of_variable::Type, size::NTuple)
+   field = Data_Manager.create_constant_free_size_field(Fieldname::String, Type_of_variable::Type, size::NTuple)
+    fieldN, fieldNP1 = Data_Manager.create_free_size_field(Fieldname::String, Type_of_variable::Type, size::NTuple)
 
-   my_free_size_field = datamanager.create_constant_free_size_field(&quot;my free size field&quot;, Bool, (200,1,3,4,1))
-
-    return datamanager
-end</code></pre><ul><li>If fields already exist, the field is returned</li><li>Get fields and use them; if you want to now, what fields are already defined and usable</li></ul><pre><code class="language-julia hljs">datamanager.get_all_field_keys()</code></pre><ul><li>All node fields can be exported to the result file</li></ul><pre><code class="language-julia hljs">function compute_model(datamanager::Module,
-                       nodes::AbstractVector{Int64},
+   my_free_size_field = Data_Manager.create_constant_free_size_field(&quot;my free size field&quot;, Bool, (200,1,3,4,1))
+end</code></pre><ul><li>If fields already exist, the field is returned</li><li>Get fields and use them; if you want to now, what fields are already defined and usable</li></ul><pre><code class="language-julia hljs">Data_Manager.get_all_field_keys()</code></pre><ul><li>All node fields can be exported to the result file</li></ul><pre><code class="language-julia hljs">function compute_model(nodes::AbstractVector{Int64},
                        damage_parameter::Dict,
                        block::Int64,
                        time::Float64,
                        dt::Float64,
                        to::TimerOutput)
-    my_constant_field = datamanager.get_field(&quot;my constant node field&quot;)
-    my_field_N = datamanager.get_field(&quot;my node field&quot;,&quot;N&quot;)
-    my_field_NP1 = datamanager.get_field(&quot;my node field&quot;,&quot;NP1&quot;)
+    my_constant_field = Data_Manager.get_field(&quot;my constant node field&quot;)
+    my_field_N = Data_Manager.get_field(&quot;my node field&quot;,&quot;N&quot;)
+    my_field_NP1 = Data_Manager.get_field(&quot;my node field&quot;,&quot;NP1&quot;)
 
     my_field_NP1 .= damage_parameter[&quot;Important value&quot;]
-
-    return datamanager
 end</code></pre><ul><li>If N and NP1 exist only NP1 will be exported</li></ul><pre><code class="language-yaml hljs">    Output1:
       Number of Output Steps: 100
       Output File Type: Exodus
@@ -59,10 +50,10 @@ end</code></pre><ul><li>If N and NP1 exist only NP1 will be exported</li></ul><p
         my node field: true
         my constant node field: true</code></pre><ul><li>Activate the model class. Material is set to true by default. The rest is set to zero.</li></ul><pre><code class="language-yaml hljs">    Solver:
         Damage Models: true</code></pre><h3 id="Run-your-model"><a class="docs-heading-anchor" href="#Run-your-model">Run your model</a><a id="Run-your-model-1"></a><a class="docs-heading-anchor-permalink" href="#Run-your-model" title="Permalink"></a></h3><ol><li>create your yaml with all your parameters</li><li>create a mesh file</li><li>run the model</li></ol><pre><code class="language-julia hljs">using PeriLab
-PeriLab.main(&quot;Folder where to find your yaml&quot;)</code></pre><h3 id="Remarks"><a class="docs-heading-anchor" href="#Remarks">Remarks</a><a id="Remarks-1"></a><a class="docs-heading-anchor-permalink" href="#Remarks" title="Permalink"></a></h3><p>If you define parameter in your mesh, you can call them in PeriLab as well.</p><pre><code class="language-ascii hljs">header: x y block_id volume my_values my_datax my_datay</code></pre><pre><code class="language-julia hljs">datamanager.get_field(&quot;my_values&quot;)
-datamanager.get_field(&quot;my_data&quot;)</code></pre><p>my<em>datax and my</em>datay are a 2D array.</p><div class="admonition is-info" id="Mesh-defined-field-properties-198664ce5c826607"><header class="admonition-header">Mesh defined field properties<a class="admonition-anchor" href="#Mesh-defined-field-properties-198664ce5c826607" title="Permalink"></a></header><div class="admonition-body"><p>The variable type is given by the input (Int64, Float64 or Bool) and its a constant field.</p></div></div><script type="module">import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs';
+PeriLab.main(&quot;Folder where to find your yaml&quot;)</code></pre><h3 id="Remarks"><a class="docs-heading-anchor" href="#Remarks">Remarks</a><a id="Remarks-1"></a><a class="docs-heading-anchor-permalink" href="#Remarks" title="Permalink"></a></h3><p>If you define parameter in your mesh, you can call them in PeriLab as well.</p><pre><code class="language-ascii hljs">header: x y block_id volume my_values my_datax my_datay</code></pre><pre><code class="language-julia hljs">Data_Manager.get_field(&quot;my_values&quot;)
+Data_Manager.get_field(&quot;my_data&quot;)</code></pre><p>my<em>datax and my</em>datay are a 2D array.</p><div class="admonition is-info" id="Mesh-defined-field-properties-198664ce5c826607"><header class="admonition-header">Mesh defined field properties<a class="admonition-anchor" href="#Mesh-defined-field-properties-198664ce5c826607" title="Permalink"></a></header><div class="admonition-body"><p>The variable type is given by the input (Int64, Float64 or Bool) and its a constant field.</p></div></div><script type="module">import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs';
 mermaid.initialize({
     startOnLoad: true,
     theme: "neutral"
 });
-</script></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../seminar_8/">« Seminar 8</a><a class="docs-footer-nextpage" href="../../lib/faq/">FAQ »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.15.0 on <span class="colophon-date" title="Monday 27 October 2025 22:38">Monday 27 October 2025</span>. Using Julia version 1.10.10.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+</script></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../seminar_8/">« Seminar 8</a><a class="docs-footer-nextpage" href="../../lib/faq/">FAQ »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.15.0 on <span class="colophon-date" title="Tuesday 28 October 2025 19:31">Tuesday 28 October 2025</span>. Using Julia version 1.10.10.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
